Az update művelete kész

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -12,7 +12,7 @@
     <h1>Dolgozók</h1>
 
     <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#empModal">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#empModal" id="addButton">
   Hozzáadás
 </button>
 
