Bootstrap kártya használata

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -54,8 +54,12 @@
     </div>
   </div>
 </div>
+
+<div id="cards">
+  
+</div>
     
-    <table class="table table-striped">
+    <!-- <table class="table table-striped">
       <thead>
         <tr>
           <th>Id</th>
@@ -64,10 +68,10 @@
           <th>Fizetés</th>
         </tr>
       </thead>
-      <tbody id="tbody">
+      <tbody id="tbody">-->
         <!-- //ide -->
-      </tbody>
-    </table>
+      <!--</tbody>
+    </table> -->
 
   </div>
   <script src="bootstrap.js"></script>
