Törlés előtt rákérdezés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -29,7 +29,7 @@
         <div class="empform">
           <div class="input">
             <label for="id" class="form-label">Id</label>
-            <input type="text" id="id" class="form-control" readonly>
+            <input type="text" id="id" class="form-control" readonly disabled>
           </div>
           <div class="input">
             <label for="name" class="form-label">Név</label>
@@ -70,6 +70,26 @@
     </table>
 
   </div>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deleteModalLabel">Törlés figyelmeztetés</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Biztosan törli?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégse</button>
+        <button type="button" class="btn btn-primary" onclick="deleteEmployee()" data-bs-dismiss="modal">Törlés</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <script src="bootstrap.js"></script>
   <script src="app.js"></script>  
 </body>
